--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
 {
-    "dist_gap_mean": 0.274716042312,
-    "dist_gap_std": 0.127051674693,
-    "time_gap_mean": 43.8756927994,
-    "time_gap_std": 51.4811932987,
-    "lngs_std": 0.04988770679679998,
-    "lngs_mean": 104.05810954320589,
-    "lats_mean": 30.652312982784895,
-    "dist_std": 3.9656010701306283,
-    "dist_mean": 9.578281194509781,
-    "lats_std": 0.04154695076189434,
-    "time_mean": 1555.75269436,
-    "time_std": 646.373021152,
-    "train_set": ["train_00", "train_01", "train_02", "train_03"],
-    "eval_set": ["train_04"],
+    "dist_gap_mean": 8.471715324054513,
+    "dist_gap_std": 19.323628157528695,
+    "time_gap_mean": 14.64352435369903,
+    "time_gap_std": 25.481383042117592,
+    "lngs_std": 0.26457931827409215,
+    "lngs_mean": 51.5055930728136,
+    "lats_mean": 25.275349569249155,
+    "dist_std": 22.30738420187278,
+    "dist_mean": 12.275806192922609,
+    "lats_std": 0.10132906474889311,
+    "time_mean": 23.105041487238736,
+    "time_std": 20.359924682166238,
+    "train_set": ["train"],
+    "eval_set": ["eval"],
     "test_set": ["test"]
 }
